--- a/WPF.QuickStart.UI/Views/Twitter/TwitterView.xaml
+++ b/WPF.QuickStart.UI/Views/Twitter/TwitterView.xaml
@@ -1,7 +1,8 @@
 ﻿<UserControl x:Class="WPF.QuickStart.UI.Views.Twitter.TwitterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:cal="http://www.caliburnproject.org"   
+             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid"
@@ -52,9 +53,24 @@
                     <StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Keyword : " />
-                            <TextBox x:Name="Keyword" Width="170" Controls:TextboxHelper.Watermark="Type a keyword ..." Controls:TextboxHelper.ClearTextButton="True" />
+                            <TextBox x:Name="Keyword" Width="170" Height="26" Controls:TextboxHelper.Watermark="Type a keyword ..." Controls:TextboxHelper.ClearTextButton="True" />
+                            <Button Width="50"
+                                Height="50"
+                                Margin="8, 0, 0, 0"
+                                ToolTip="Advanced Search"
+                                Style="{DynamicResource MetroCircleButtonStyle}"
+                                cal:Message.Attach="ShowAdvancedSearch">
+                                <Rectangle Width="20"
+                                   Height="20"
+                                   Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
+                                    <Rectangle.OpacityMask>
+                                        <VisualBrush Stretch="Fill"
+                                         Visual="{DynamicResource appbar_twitter_bird}" />
+                                    </Rectangle.OpacityMask>
+                                </Rectangle>
+                            </Button>
                         </StackPanel>
-                        <Button x:Name="Search" Content="Search" Margin="5,52,5,5" />
+                        <Button x:Name="Search" Content="Search" Margin="5,27,5,5" />
                     </StackPanel>
                 </GroupBox>
 
